# ShahTerminal

./: CMakeLists.txt  api_keys  database_page.py  uzx_doc.html  uzx_err.txt  uzx_out.txt
.continue/agents/: new-config-2.yaml
backend/include/: OrderBook.hpp
backend/src/: OrderBook.cpp  main.cpp
docs/: dom_widget_overview.md  ladder_design.md
gui_native/: ConnectionStore.cpp  ConnectionStore.h  ConnectionsWindow.cpp  ConnectionsWindow.h  DomTypes.h  DomWidget.cpp  DomWidget.h  LadderClient.cpp  LadderClient.h  MainWindow.cpp  MainWindow.cpp.bak  MainWindow.h  MainWindow_utf8.cpp  PluginsWindow.cpp  PluginsWindow.h  PrintsWidget.cpp  PrintsWidget.h  SettingsWindow.cpp  SettingsWindow.h  SymbolPickerDialog.cpp  SymbolPickerDialog.h  TradeManager.cpp  TradeManager.h  TradeTypes.h  main.cpp
gui_old/: __init__.py  app.py  backend.py  ladder.py  main.py  main_tmp.py  plugins.py  plugins_window.py  settings_window.py  terminal_window.py
img/: git.txt
mods/: ladder_clicker.py
scripts/: run.py
